--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "lint": "eslint src",
     "format": "prettier --write \"./**/*.{html,vue,ts,js,json,md}\"",
+    "commitlint": "commitlint --config commitlint.config.cjs -e -V",
     "fix": "eslint src --fix",
     "prepare": "husky install"
   },
@@ -18,6 +19,8 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.22.5",
+    "@commitlint/cli": "^17.6.5",
+    "@commitlint/config-conventional": "^17.6.5",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "@vitejs/plugin-vue": "^4.1.0",
