--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write \"./**/*.{html,vue,ts,js,json,md}\"",
     "commitlint": "commitlint --config commitlint.config.cjs -e -V",
     "fix": "eslint src --fix",
+    "preinstall": "node ./scripts/preinstall.js",
     "prepare": "husky install"
   },
   "dependencies": {
