--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "fix": "eslint src --fix",
     "preinstall": "node ./scripts/preinstall.js",
     "prepare": "husky install",
-    "build:test":"vue-tsc && vite build --mode test",
-    "build:prod":"vue-tsc && vite build --mode production"
+    "build:test": "vue-tsc && vite build --mode test",
+    "build:prod": "vue-tsc && vite build --mode production"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "axios": "^1.4.0",
+    "element-plus": "^2.3.6",
     "pinia": "^2.1.3",
     "vue": "^3.2.47"
   },
@@ -35,6 +38,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.14.1",
     "husky": "^8.0.0",
+    "mockjs": "^1.1.0",
     "postcss": "^8.4.24",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.6",
@@ -52,6 +56,8 @@
     "stylelint-scss": "^5.0.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
+    "vite-plugin-mock": "^2.9.8",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.4.2"
   }
 }
