--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "axios": "^1.4.0",
     "element-plus": "^2.3.6",
     "pinia": "^2.1.3",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.22.5",
