--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
     "element-plus": "^2.3.6",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.3",
     "vue": "^3.2.47",
     "vue-router": "^4.0.13"
@@ -28,6 +29,7 @@
     "@babel/eslint-parser": "^7.22.5",
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
+    "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "@vitejs/plugin-vue": "^4.1.0",
