--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "vue3-ts",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite --open",
     "build": "vue-tsc && vite build",
@@ -18,10 +17,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "amfe-flexible": "^2.2.1",
     "axios": "^1.4.0",
     "element-plus": "^2.3.6",
+    "lib-flexible": "^0.3.2",
     "nprogress": "^0.2.0",
-    "pinia": "^2.1.3",
+    "pinia": "2.0.9",
+    "vant": "^4.6.3",
     "vue": "^3.2.47",
     "vue-router": "^4.0.13"
   },
@@ -34,6 +36,7 @@
     "@typescript-eslint/parser": "^5.59.9",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vue/eslint-config-prettier": "^7.1.0",
+    "commitizen": "^4.3.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
@@ -44,6 +47,8 @@
     "mockjs": "^1.1.0",
     "postcss": "^8.4.24",
     "postcss-html": "^1.5.0",
+    "postcss-px-to-viewport": "^1.1.1",
+    "postcss-pxtorem": "^6.0.0",
     "postcss-scss": "^4.0.6",
     "prettier": "^2.8.8",
     "sass": "^1.63.3",
@@ -62,5 +67,10 @@
     "vite-plugin-mock": "^2.9.8",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.4.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/commitizen"
+    }
   }
 }
